@@ -1,5 +1,8 @@
 2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-salt.el (gnus-highlight-selected-tree): Check whether the Tree
+	buffer exists before using it (bug#12475).
+
 	* gnus-agent.el (gnus-agent-fetch-articles): Don't fetch articles from
 	offline groups (bug#11937).
 
